change link to Git Hub page

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                         <a href="tel:+380679597125">+38 067 959 71 25</a>
                     </li>
                     <li class="info-item">
-                        <span>Еmail</span>
+                        <span>Email</span>
                         <a href="mailto:bogdanalucka@gmail.com">bogdanalucka@gmail.com</a>
                     </li>
                     <li class="info-item">
