--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     </li>
                     <li class="info-item">
                         <span>Phone</span>
-                        <a href="tel:+380679597125">+38 067 959 71 25</a>
+                        <a href="tel:+380679597125">+380679597125</a>
                     </li>
                     <li class="info-item">
                         <span>Email</span>
